--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 				<div class="boutique-table-cell js-fullheight">
 					<div class="row no-gutters">
 						<div class="col-md-12 text-center">
-							<h1 class="mb-4"><a href="index.html" class="logo">Boutique</a></h1>
+							<a href="index.html" class="logo mb-4">
+								<img class="img-fluid" src="assets/images/logo.png" alt="">
+							</a>
 							<ul>
 								<li class="active"><a href="index.html"><span><small>01</small>Home</span></a></li>
 								<li><a href="#!"><span><small>02</small>About</span></a></li>
@@ -46,7 +48,9 @@
 		<div id="boutique-page">
 			<header>
 				<div class="boutique-navbar-brand text-center">
-					<a class="boutique-logo" href="index.html">Boutique</a>
+					<a class="boutique-logo" href="index.html">
+						<img class="img-fluid" src="assets/images/logo.png" alt="">
+					</a>
 				</div>
 				<a href="#" class="js-boutique-nav-toggle boutique-nav-toggle"><i></i></a>
 			</header>
@@ -91,9 +95,9 @@
 
 			</section>
 
-			<section class="btq-section">
-				<div class="container d-flex  align-content-end  justify-content-center ">
-					<iframe width="840" height="460" src="https://roundme.com/embed/366035/1246788" frameborder="0"
+			<section class="">
+				<div class=" d-flex  align-content-end  justify-content-center ">
+					<iframe width="100%" height="640" src="https://roundme.com/embed/366035/1246788" frameborder="0"
 						allowfullscreen="true" mozAllowFullscreen="true" webkitallowfullscreen="true"></></iframe>
 					<!-- webkitallowfullscreen mozillallowfullscreen allowfullscreen -->
 				</div>
