--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					</div>
 				</a>
 
-				<a href="#!" class="slider-item" style="background-image: url('assets/images/002.jpg');">
+				<a href="#!" class="slider-item" style="background-image: url('assets/images/002.jpeg');">
 					<div class="overlay"></div>
 					<div class="container">
 						<div class="row slider-text align-items-end justify-content-center">
@@ -199,7 +199,7 @@
 										#03
 									</h3>
 								</div>
-								<img src="assets/images/001.jpg" class="img-fluid" alt="boutique Template">
+								<img src="assets/images/001.jpg" class="img-fluid" alt="">
 							</a>
 						</div>
 						<div class="col-md-8">
@@ -213,7 +213,7 @@
 										#04
 									</h3>
 								</div>
-								<img src="assets/images/004.jpg" class="img-fluid" alt="boutique Template">
+								<img src="assets/images/003.jpg" class="img-fluid" alt="">
 							</a>
 							<div class="row">
 								<div class="col-md-6">
@@ -227,7 +227,7 @@
 												#05
 											</h3>
 										</div>
-										<img src="assets/images/003.jpg" class="img-fluid" alt="boutique Template">
+										<img src="assets/images/002.jpeg" class="img-fluid" alt="">
 									</a>
 								</div>
 								<div class="col-md-6">
@@ -241,7 +241,7 @@
 												#06
 											</h3>
 										</div>
-										<img src="assets/images/002.jpg" class="img-fluid" alt="boutique Template">
+										<img src="assets/images/001.jpg" class="img-fluid" alt="">
 									</a>
 								</div>
 							</div>
