--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Boutique</title>
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
 	<link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/open-iconic-bootstrap.min.css">
@@ -20,6 +21,7 @@
 	<link rel="stylesheet" href="assets/css/flaticon.css">
 	<link rel="stylesheet" href="assets/css/icomoon.css">
 	<link rel="stylesheet" href="assets/css/style.css">
+	
 </head>
 
 <body>
