--- a/index.html
+++ b/index.html
@@ -137,24 +137,18 @@
 								<div class="tab-pane fade show active py-5" id="v-pills-master" role="tabpanel"
 									aria-labelledby="v-pills-master-tab">
 									<span class="icon mb-3 d-block flaticon-house-plans"></span>
-									<h2 class="mb-4">Interior Design</h2>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum dolorem impedit
-										velit neque
-										expedita similique culpa maiores totam quasi aperiam molestias minima iure rerum
-										nihil, doloremque,
-										asperiores alias laboriosam laudantium.</p>
+									<h2 class="mb-4">Diseñado para la exclusividad</h2>
+									<p>Nuestro apartamento tipo Loft de 36 m2, cuenta con cocina tipo americana, sala- comedor, alcoba principal, walking closet y baño.
+										Un trabajo de diseño "industrial" unido a nuestra visión de Lujo, Exclusividad y confort, ha logrado crear un apartamento único, desde su arquitectura hasta su interior.</p>
 									<p><a href="#" class="btn btn-primary px-4 py-3">Learn More</a></p>
 								</div>
 
 								<div class="tab-pane fade py-5" id="v-pills-buffet" role="tabpanel"
 									aria-labelledby="v-pills-buffet-tab">
 									<span class="icon mb-3 d-block flaticon-ideas"></span>
-									<h2 class="mb-4">Concept Design</h2>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum dolorem impedit
-										velit neque
-										expedita similique culpa maiores totam quasi aperiam molestias minima iure rerum
-										nihil, doloremque,
-										asperiores alias laboriosam laudantium.</p>
+									<h2 class="mb-4">Diseñado para la exclusividad</h2>
+									<p>Nuestro apartamento tipo Loft de 36 m2, cuenta con cocina tipo americana, sala- comedor, alcoba principal, walking closet y baño.
+										Un trabajo de diseño "industrial" unido a nuestra visión de Lujo, Exclusividad y confort, ha logrado crear un apartamento único, desde su arquitectura hasta su interior.</p>
 
 									<p><a href="#" class="btn btn-primary px-4 py-3">Learn More</a></p>
 								</div>
@@ -162,12 +156,9 @@
 								<div class="tab-pane fade py-5" id="v-pills-fitness" role="tabpanel"
 									aria-labelledby="v-pills-fitness-tab">
 									<span class="icon mb-3 d-block flaticon-modern-house"></span>
-									<h2 class="mb-4">Residential Design</h2>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum dolorem impedit
-										velit neque
-										expedita similique culpa maiores totam quasi aperiam molestias minima iure rerum
-										nihil, doloremque,
-										asperiores alias laboriosam laudantium.</p>
+									<h2 class="mb-4">Diseñado para la exclusividad</h2>
+									<p>Nuestro apartamento tipo Loft de 36 m2, cuenta con cocina tipo americana, sala- comedor, alcoba principal, walking closet y baño.
+										Un trabajo de diseño "industrial" unido a nuestra visión de Lujo, Exclusividad y confort, ha logrado crear un apartamento único, desde su arquitectura hasta su interior.</p>
 									<p><a href="#" class="btn btn-primary px-4 py-3">Learn More</a></p>
 								</div>
 							</div>
@@ -183,11 +174,11 @@
 							<div class="row">
 								<div class="col-md-12 heading-section btq-animate mb-3">
 									<h2 class="mb-4">About</h2>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum dolorem impedit
-										velit neque
-										expedita similique culpa maiores totam quasi aperiam molestias minima iure rerum
-										nihil, doloremque,
-										asperiores alias laboriosam laudantium.</p>
+									<p>Nuestra colección, inspirada en la elegancia, la exclusividad y el confort, ofrece cómodos apartamentos tipo Loft, ideales para quienes buscan un lugar único, con un diseño arquitectónico vanguardista, que les permita disfrutar al máximo su estilo de vida.</p>
+
+									<p>Boutique By King David es una oda a la modernidad con apartaestudios que van desde los 32 m2, equipados con cocina americana, sala-comedor, y un diseño de interiores pensado para su disfrute y comodidad.</p>
+										
+										<p>Boutique By King David, Excelso.</p>
 								</div>
 							</div>
 
