--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<link rel="stylesheet" href="assets/css/flaticon.css">
 	<link rel="stylesheet" href="assets/css/icomoon.css">
 	<link rel="stylesheet" href="assets/css/style.css">
-	
+
 </head>
 
 <body>
@@ -138,8 +138,11 @@
 									aria-labelledby="v-pills-master-tab">
 									<span class="icon mb-3 d-block flaticon-house-plans"></span>
 									<h2 class="mb-4">Diseñado para la exclusividad</h2>
-									<p>Nuestro apartamento tipo Loft de 36 m2, cuenta con cocina tipo americana, sala- comedor, alcoba principal, walking closet y baño.
-										Un trabajo de diseño "industrial" unido a nuestra visión de Lujo, Exclusividad y confort, ha logrado crear un apartamento único, desde su arquitectura hasta su interior.</p>
+									<p>Nuestro apartamento tipo Loft de 36 m2, cuenta con cocina tipo americana, sala-
+										comedor, alcoba principal, walking closet y baño.
+										Un trabajo de diseño "industrial" unido a nuestra visión de Lujo, Exclusividad y
+										confort, ha logrado crear un apartamento único, desde su arquitectura hasta su
+										interior.</p>
 									<p><a href="#" class="btn btn-primary px-4 py-3">Learn More</a></p>
 								</div>
 
@@ -147,8 +150,11 @@
 									aria-labelledby="v-pills-buffet-tab">
 									<span class="icon mb-3 d-block flaticon-ideas"></span>
 									<h2 class="mb-4">Diseñado para la exclusividad</h2>
-									<p>Nuestro apartamento tipo Loft de 36 m2, cuenta con cocina tipo americana, sala- comedor, alcoba principal, walking closet y baño.
-										Un trabajo de diseño "industrial" unido a nuestra visión de Lujo, Exclusividad y confort, ha logrado crear un apartamento único, desde su arquitectura hasta su interior.</p>
+									<p>Nuestro apartamento tipo Loft de 38 m2, cuenta con cocina tipo americana, sala-
+										comedor, alcoba principal, walking closet y baño.
+										Un trabajo de diseño "industrial" unido a nuestra visión de Lujo, Exclusividad y
+										confort, ha logrado crear un apartamento único, desde su arquitectura hasta su
+										interior.</p>
 
 									<p><a href="#" class="btn btn-primary px-4 py-3">Learn More</a></p>
 								</div>
@@ -157,8 +163,11 @@
 									aria-labelledby="v-pills-fitness-tab">
 									<span class="icon mb-3 d-block flaticon-modern-house"></span>
 									<h2 class="mb-4">Diseñado para la exclusividad</h2>
-									<p>Nuestro apartamento tipo Loft de 36 m2, cuenta con cocina tipo americana, sala- comedor, alcoba principal, walking closet y baño.
-										Un trabajo de diseño "industrial" unido a nuestra visión de Lujo, Exclusividad y confort, ha logrado crear un apartamento único, desde su arquitectura hasta su interior.</p>
+									<p>Nuestro apartamento tipo Loft de 40 m2, cuenta con cocina tipo americana, sala-
+										comedor, alcoba principal, walking closet y baño.
+										Un trabajo de diseño "industrial" unido a nuestra visión de Lujo, Exclusividad y
+										confort, ha logrado crear un apartamento único, desde su arquitectura hasta su
+										interior.</p>
 									<p><a href="#" class="btn btn-primary px-4 py-3">Learn More</a></p>
 								</div>
 							</div>
@@ -174,11 +183,16 @@
 							<div class="row">
 								<div class="col-md-12 heading-section btq-animate mb-3">
 									<h2 class="mb-4">About</h2>
-									<p>Nuestra colección, inspirada en la elegancia, la exclusividad y el confort, ofrece cómodos apartamentos tipo Loft, ideales para quienes buscan un lugar único, con un diseño arquitectónico vanguardista, que les permita disfrutar al máximo su estilo de vida.</p>
+									<p>Nuestra colección, inspirada en la elegancia, la exclusividad y el confort,
+										ofrece cómodos apartamentos tipo Loft, ideales para quienes buscan un lugar
+										único, con un diseño arquitectónico vanguardista, que les permita disfrutar al
+										máximo su estilo de vida.</p>
 
-									<p>Boutique By King David es una oda a la modernidad con apartaestudios que van desde los 32 m2, equipados con cocina americana, sala-comedor, y un diseño de interiores pensado para su disfrute y comodidad.</p>
-										
-										<p>Boutique By King David, Excelso.</p>
+									<p>Boutique By King David es una oda a la modernidad con apartaestudios que van
+										desde los 32 m2, equipados con cocina americana, sala-comedor, y un diseño de
+										interiores pensado para su disfrute y comodidad.</p>
+
+									<p>Boutique By King David, Excelso.</p>
 								</div>
 							</div>
 
