--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
 
 
 			</section>
+			<section class="btq-info">
+				<div class="container">
+					
+					<p>¡Comunicate con nosotros por Whatsapp! Estamos disponibles las 24 horas del día para atender cualquiera de tus dudas.</p>
+					<h2 class="text-right"> <img src="assets/images/what.png" class="img-info" alt=""> 3002389374.</h2>
+				</div>
+			</section>
 
 			<section class="">
 				<div class=" d-flex  align-content-end  justify-content-center ">
