--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				<div class="container">
 					
 					<p>¡Comunicate con nosotros por Whatsapp! Estamos disponibles las 24 horas del día para atender cualquiera de tus dudas.</p>
-					<h2 class="text-right"> <img src="assets/images/what.png" class="img-info" alt=""> 3002389374.</h2>
+					<h2 class="text-right"> <img src="assets/images/what.png" class="img-info" alt=""> <a href=""></a> 3002389374.</h2>
 				</div>
 			</section>
 
