--- a/index.html
+++ b/index.html
@@ -58,13 +58,14 @@
 			</header>
 
 			<section class="home-slider owl-carousel">
-				<a href="#!" class="slider-item" style="background-image: url('assets/images/001.jpg');">
+				<a href="#!" class="slider-item " style="background-image: url('assets/images/001.jpg');">
 					<div class="overlay"></div>
 					<div class="container">
 						<div class="row slider-text align-items-end justify-content-center">
 							<div class="col-md-12 btq-animate p-4" data-scrollax=" properties: { translateY: '70%' }">
 								<h1 class="mb-3" data-scrollax="properties: { translateY: '30%', opacity: 1.6 }">
 									Ubicación privilegiada</h1>
+									
 							</div>
 						</div>
 					</div>
@@ -96,21 +97,20 @@
 
 
 			</section>
-			<section class="btq-info">
+			<section class="btq-info effect-lily">
 				<div class="container">
 					
-					<p>¡Comunicate con nosotros por Whatsapp! Estamos disponibles las 24 horas del día para atender cualquiera de tus dudas.</p>
-					<h2 class="text-right"> <img src="assets/images/what.png" class="img-info" alt=""> <a href=""></a> 3002389374.</h2>
+					<h2>¡Comunicate con nosotros por Whatsapp! Estamos disponibles las 24 horas del día para atender cualquiera de tus dudas.</h2>
+					<p class="text-right"> <img src="assets/images/what.png" class="img-info" alt=""> <a href="#">3002389374.</a> </p>
 				</div>
 			</section>
 
-			<section class="">
+			<!--<section class="">
 				<div class=" d-flex  align-content-end  justify-content-center ">
 					<iframe width="100%" height="640" src="https://roundme.com/embed/366035/1246788" frameborder="0"
 						allowfullscreen="true" mozAllowFullscreen="true" webkitallowfullscreen="true"></></iframe>
-					<!-- webkitallowfullscreen mozillallowfullscreen allowfullscreen -->
 				</div>
-			</section>
+			</section> -->
 
 
 
