--- a/index.html
+++ b/index.html
@@ -372,6 +372,28 @@
 				</div>
 			</div>
 		</div>
+
+
+		
+	<div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myExtraLargeModalLabel"
+	aria-hidden="true" id="modalShow">
+	<div class="modal-dialog modal-xl">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body bg-frame">
+				<div class="text-frame">
+					BOUTIQUE
+				</div>
+
+			</div>
+		</div>
+	</div>
+</div>
+
 	</div>
 
 	<script src="assets/js/jquery.min.js"></script>
