--- a/index.html
+++ b/index.html
@@ -264,6 +264,15 @@
 				</div>
 			</section>
 
+			<section class="btq-section wapper">
+				<div class="container">
+						<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque dolores atque exercitationem error esse aliquam dolore, odio itaque tempora harum natus maxime fuga incidunt deleniti, neque soluta aut nihil dolor.
+							</p>
+				</div>
+				
+
+			</section>
+
 			<footer class="btq-footer btq-bg-dark btq-section">
 				<div class="container">
 					<div class="row mb-5 justify-content-center">
