--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				<div class="container">
 					
 					<h2>¡Comunicate con nosotros por Whatsapp! Estamos disponibles las 24 horas del día para atender cualquiera de tus dudas.</h2>
-					<p class="text-right"> <img src="assets/images/what.png" class="img-info" alt=""> <a href="#">3002389374.</a> </p>
+					<p class="text-right"> <img src="assets/images/what.png" class="img-info" alt=""> <a href="https://api.whatsapp.com/send?phone=3002389374&text=Hola!%20Quiero%20comunicarme%20con%ustedes!">3002389374.</a> </p>
 				</div>
 			</section>
 
