--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			</header>
 
 			<section class="home-slider owl-carousel">
-				<a href="#!" class="slider-item " style="background-image: url('assets/images/001.jpg');">
+				<div class="slider-item " style="background-image: url('assets/images/001.jpg');">
 					<div class="overlay"></div>
 					<div class="container">
 						<div class="row slider-text align-items-end justify-content-center">
@@ -69,9 +69,9 @@
 							</div>
 						</div>
 					</div>
-				</a>
+				</div>
 
-				<a href="#!" class="slider-item" style="background-image: url('assets/images/002.jpeg');">
+				<div class="slider-item" style="background-image: url('assets/images/002.jpeg');">
 					<div class="overlay"></div>
 					<div class="container">
 						<div class="row slider-text align-items-end justify-content-center">
@@ -81,9 +81,9 @@
 							</div>
 						</div>
 					</div>
-				</a>
+				</div>
 
-				<a href="#!" class="slider-item" style="background-image: url('assets/images/003.jpg');">
+				<div class="slider-item" style="background-image: url('assets/images/003.jpg');">
 					<div class="overlay"></div>
 					<div class="container">
 						<div class="row slider-text align-items-end justify-content-center">
@@ -93,7 +93,7 @@
 							</div>
 						</div>
 					</div>
-				</a>
+				</div>
 
 
 			</section>
@@ -284,7 +284,7 @@
 									<li class="btq-animate"><a href="#"><span class="icon-facebook"></span></a></li>
 									<li class="btq-animate"><a href="#"><span class="icon-instagram"></span></a></li>
 								</ul> -->
-								<form action="#">
+								<form action="#"> <!--   boutique@itous.com   -->
 									<div class="row">
 										<div class="col-md-6">
 											<div class="form-group">
@@ -313,7 +313,7 @@
 											rows="3" placeholder="Mensaje"></textarea>
 									</div>
 									<div class="form-group">
-										<input type="submit" value="Send Message" class="btn btn-primary btn-form">
+										<input type="submit" value="Envíanos tu mensaje" class="btn btn-primary btn-form">
 									</div>
 
 
