--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 								<img class="img-fluid" src="assets/images/logo.png" alt="">
 							</a>
 							<ul>
-								<li class="active"><a href="index.html"><span><small>01</small>Home</span></a></li>
-								<li><a href="#about"><span><small>02</small> Sobre Nosotros</span></a></li>
+								<li class="active"><a href="index.html"><span><small>01</small>Inicio</span></a></li>
+								<li><a href="#about" class=""><span><small>02</small> Sobre Nosotros</span></a></li>
 								<li><a href="#contact"><span><small>03</small> Contáctanos</span></a></li>
 							</ul>
 						</div>
@@ -183,7 +183,7 @@
 				</div>
 			</section>
 
-			<section class="btq-section" id="about">
+			<section class="btq-section" id="about" name="about">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-4">
@@ -274,7 +274,7 @@
 
 			<footer class="btq-footer btq-bg-dark btq-section" id="contact">
 				<div class="container">
-					<h2 class="mb-3"><a href="#" data-toggle="modal" data-target="#modalContact">Contactanos</a></h2>
+					<h2 class="mb-3"><a href="#" >Contactanos</a></h2>
 					<div class="row mb-5 justify-content-center">
 						<div class="col-lg-6 text-left">
 							<div class="btq-footer-widget mb-3">
